# surblclient

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_tld_tree.py  prek.toml  pyproject.toml
.forgejo/workflows/: release.yml  test.yml
.github/workflows/: close-pull-requests.yml
src/surblclient/: __init__.py  blacklist.py  spamhausdbl.py  surbl.py  uribl.py
tests/: test_live.py  test_surblclient.py
