[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[project]
name = "surblclient"
version = "0.2.0"
description = "Client library for querying SURBL and other RBL blocklists."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Filip Salo", email = "filip@infix.se" }]
keywords = ["surbl", "uribl", "rbl", "blocklist", "blacklist", "dns", "spam"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://codeberg.org/filipsalo/surblclient"
Repository = "https://codeberg.org/filipsalo/surblclient"
